{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 344,
  "lineage": "14f2a131-9fe8-0e17-c0c9-ab97c2449af6",
  "resources": [
    {
      "module": "module.backend_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3ce86fb8321acb9",
            "arn": "arn:aws:ec2:us-east-1:304534109815:instance/i-02f3356464bc9b6af",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "oncology-app-prod-ec2-profile",
            "id": "i-02f3356464bc9b6af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cloud-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081c748dbf8b0c3a5",
            "private_dns": "ip-10-0-3-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:304534109815:key/b32fd568-f617-4bb9-9126-23e8e9ff77bf",
                "throughput": 125,
                "volume_id": "vol-0fb312426dee05e16",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2f9eeb62cb868e5",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-backend-server",
              "Project": "oncology-app",
              "Type": "Backend"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-backend-server",
              "Project": "oncology-app",
              "Type": "Backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0446c07c56c06c26f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.backend_ec2.data.aws_ami.amazon_linux",
            "module.backend_ec2.data.aws_region.current",
            "module.cloudwatch.aws_cloudwatch_log_group.backend_logs",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.web",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07190ac388d5a12fa",
            "arn": "arn:aws:ec2:us-east-1:304534109815:elastic-ip/eipalloc-07190ac388d5a12fa",
            "association_id": "eipassoc-08417c5d16646114e",
            "domain": "vpc",
            "id": "eipalloc-07190ac388d5a12fa",
            "instance": "i-00c35a7a49f2f8ae5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc29c5ccfcf36e99",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-34-226-177-13.compute-1.amazonaws.com",
            "public_ip": "34.226.177.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-frontend-eip",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-frontend-eip",
              "Project": "oncology-app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.backend_ec2.aws_instance.backend",
            "module.backend_ec2.data.aws_ami.amazon_linux",
            "module.backend_ec2.data.aws_region.current",
            "module.cloudwatch.aws_cloudwatch_log_group.app_logs",
            "module.cloudwatch.aws_cloudwatch_log_group.backend_logs",
            "module.frontend_ec2.aws_instance.frontend",
            "module.frontend_ec2.data.aws_ami.amazon_linux",
            "module.frontend_ec2.data.aws_region.current",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.web",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3ce86fb8321acb9",
            "arn": "arn:aws:ec2:us-east-1:304534109815:instance/i-00c35a7a49f2f8ae5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "oncology-app-prod-ec2-profile",
            "id": "i-00c35a7a49f2f8ae5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cloud-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc29c5ccfcf36e99",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-13-220-225-254.compute-1.amazonaws.com",
            "public_ip": "13.220.225.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:304534109815:key/b32fd568-f617-4bb9-9126-23e8e9ff77bf",
                "throughput": 125,
                "volume_id": "vol-0d2e50b38891cc78c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7fd6ba4e534ed49",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-frontend-server",
              "Project": "oncology-app",
              "Type": "Frontend"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-frontend-server",
              "Project": "oncology-app",
              "Type": "Frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0ea4d79a1afec63b7"
            ]
          },
          "dependencies": [
            "module.backend_ec2.aws_instance.backend",
            "module.backend_ec2.data.aws_ami.amazon_linux",
            "module.backend_ec2.data.aws_region.current",
            "module.cloudwatch.aws_cloudwatch_log_group.app_logs",
            "module.cloudwatch.aws_cloudwatch_log_group.backend_logs",
            "module.frontend_ec2.data.aws_ami.amazon_linux",
            "module.frontend_ec2.data.aws_region.current",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.web",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:security-group/sg-005496057e56058de",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005496057e56058de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "oncology-app-prod-alb-20250601211806340900000006",
            "name_prefix": "oncology-app-prod-alb-",
            "owner_id": "304534109815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-alb-sg",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-alb-sg",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:security-group/sg-0446c07c56c06c26f",
            "description": "Security group for backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0446c07c56c06c26f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea4d79a1afec63b7"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea4d79a1afec63b7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "oncology-app-prod-backend-20250601211809129900000009",
            "name_prefix": "oncology-app-prod-backend-",
            "owner_id": "304534109815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-backend-sg",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-backend-sg",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.web",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:security-group/sg-0ea4d79a1afec63b7",
            "description": "Security group for frontend web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea4d79a1afec63b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Next.js App",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "oncology-app-prod-web-20250601211806345200000007",
            "name_prefix": "oncology-app-prod-web-",
            "owner_id": "304534109815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-web-sg",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-web-sg",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bda9299f6ed063fa",
            "arn": "arn:aws:ec2:us-east-1:304534109815:elastic-ip/eipalloc-0bda9299f6ed063fa",
            "association_id": "eipassoc-020ffc3ac4e778317",
            "domain": "vpc",
            "id": "eipalloc-0bda9299f6ed063fa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07055ef4ab6d2c49a",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-35-175-37-125.compute-1.amazonaws.com",
            "public_ip": "35.175.37.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-eip-1",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-eip-1",
              "Project": "oncology-app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6ff88f4bdf26e89",
            "arn": "arn:aws:ec2:us-east-1:304534109815:elastic-ip/eipalloc-0b6ff88f4bdf26e89",
            "association_id": "eipassoc-0d6dc2621d8e8e965",
            "domain": "vpc",
            "id": "eipalloc-0b6ff88f4bdf26e89",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d0a2377d69e0e2f0",
            "private_dns": "ip-10-0-2-48.ec2.internal",
            "private_ip": "10.0.2.48",
            "public_dns": "ec2-3-83-200-226.compute-1.amazonaws.com",
            "public_ip": "3.83.200.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-eip-2",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-eip-2",
              "Project": "oncology-app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:internet-gateway/igw-0d27518a03a4eaa6f",
            "id": "igw-0d27518a03a4eaa6f",
            "owner_id": "304534109815",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-igw",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-igw",
              "Project": "oncology-app"
            },
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bda9299f6ed063fa",
            "association_id": "eipassoc-020ffc3ac4e778317",
            "connectivity_type": "public",
            "id": "nat-07b00d591bc73b5bf",
            "network_interface_id": "eni-07055ef4ab6d2c49a",
            "private_ip": "10.0.1.154",
            "public_ip": "35.175.37.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c7fd6ba4e534ed49",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-gateway-1",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-gateway-1",
              "Project": "oncology-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6ff88f4bdf26e89",
            "association_id": "eipassoc-0d6dc2621d8e8e965",
            "connectivity_type": "public",
            "id": "nat-0b1685b8f855b2f43",
            "network_interface_id": "eni-0d0a2377d69e0e2f0",
            "private_ip": "10.0.2.48",
            "public_ip": "3.83.200.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b73040ac17a595b7",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-gateway-2",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-nat-gateway-2",
              "Project": "oncology-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:route-table/rtb-0694b14664fb5ee5f",
            "id": "rtb-0694b14664fb5ee5f",
            "owner_id": "304534109815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b00d591bc73b5bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-rt-1",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-rt-1",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:route-table/rtb-0e209366b653c4f7d",
            "id": "rtb-0e209366b653c4f7d",
            "owner_id": "304534109815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b1685b8f855b2f43",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-rt-2",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-rt-2",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:route-table/rtb-00dfc54b5501aeb7b",
            "id": "rtb-00dfc54b5501aeb7b",
            "owner_id": "304534109815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d27518a03a4eaa6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-rt",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-rt",
              "Project": "oncology-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb17b36986d204d1",
            "route_table_id": "rtb-0694b14664fb5ee5f",
            "subnet_id": "subnet-0e2f9eeb62cb868e5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055426737a99c261b",
            "route_table_id": "rtb-0e209366b653c4f7d",
            "subnet_id": "subnet-0fc42d5bc1dd0a16a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0408e2bd72378589d",
            "route_table_id": "rtb-00dfc54b5501aeb7b",
            "subnet_id": "subnet-0c7fd6ba4e534ed49"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0678d021cfc4dcb75",
            "route_table_id": "rtb-00dfc54b5501aeb7b",
            "subnet_id": "subnet-0b73040ac17a595b7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:subnet/subnet-0e2f9eeb62cb868e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2f9eeb62cb868e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304534109815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-subnet-1",
              "Project": "oncology-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-subnet-1",
              "Project": "oncology-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:subnet/subnet-0fc42d5bc1dd0a16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc42d5bc1dd0a16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304534109815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-subnet-2",
              "Project": "oncology-app",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-private-subnet-2",
              "Project": "oncology-app",
              "Type": "Private"
            },
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:subnet/subnet-0c7fd6ba4e534ed49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7fd6ba4e534ed49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304534109815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-subnet-1",
              "Project": "oncology-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-subnet-1",
              "Project": "oncology-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:subnet/subnet-0b73040ac17a595b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b73040ac17a595b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304534109815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-subnet-2",
              "Project": "oncology-app",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-public-subnet-2",
              "Project": "oncology-app",
              "Type": "Public"
            },
            "vpc_id": "vpc-0581bcd9572bb253d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304534109815:vpc/vpc-0581bcd9572bb253d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a257a226c4e6af3",
            "default_route_table_id": "rtb-0d4e4bc2f14ec5fef",
            "default_security_group_id": "sg-0f2d2c5bd37d5224c",
            "dhcp_options_id": "dopt-0fde766238e8d0413",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0581bcd9572bb253d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4e4bc2f14ec5fef",
            "owner_id": "304534109815",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-vpc",
              "Project": "oncology-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "oncology-app-prod-vpc",
              "Project": "oncology-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}